Fix the views Task Manager on Mac showing 0s for the Shared Memory

R=nick@chromium.org
BUG=613025

Review-Url: https://codereview.chromium.org/1994653006
Cr-Commit-Position: refs/heads/master@{#395129}

Former-commit-id: 07a8e7b48eeff1b271e50ea371d8c7e722ee3891